# memory-leak-detector

./: CMakeLists.txt  README.md
include/: memory_leak_detector.hpp  memory_list.hpp  override_delete_operator.hpp  override_new_operator.hpp
src/: main.cpp  memory_leak_detector.cpp  memory_list.cpp  override_delete_operator.cpp  override_new_operator.cpp
